Move genetic map tests to new test file. Somehow, there is a linker issue embedding them with rest of fwdpp unit tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1,7 +1,8 @@
 if BUNIT_TEST_PRESENT
 
 noinst_PROGRAMS=unit/fwdpp_unit_tests unit/extensions_unit_tests unit/sugar_unit_tests \
-			   integration/sugar_integration_tests 
+				unit/genetic_map_tests \
+				integration/sugar_integration_tests 
 
 # integration/extensions_integration_tests \
 # tree_sequences/tree_sequence_tests
@@ -14,8 +15,10 @@ unit_fwdpp_unit_tests_SOURCES=unit/fwdpp_unit_tests.cc unit/mutateTest.cc unit/g
 	unit/test_simparams.cc \
 	unit/test_wrapped_range.cc \
 	unit/test_recombination.cc \
-	unit/test_genetic_map.cc \
 	fixtures/sugar_fixtures.cc
+
+unit_genetic_map_tests_SOURCES=unit/genetic_map_tests.cc \
+	unit/test_genetic_map.cc
 
 unit_extensions_unit_tests_SOURCES=unit/extensions_unit_test.cc unit/extensions_regionsTest.cc unit/extensions_callbacksTest.cc
 unit_sugar_unit_tests_SOURCES=unit/sugar_unit_tests.cc \
