--- a/fwdpp/genetic_map/Makefile.am
+++ b/fwdpp/genetic_map/Makefile.am
@@ -3,6 +3,7 @@ pkgincludedir=$(prefix)/include/fwdpp/genetic_map
 pkginclude_HEADERS=genetic_map_unit.hpp \
 				   poisson_interval.hpp \
 				   poisson_point.hpp \
+				   binomial_interval.hpp \
 				   binomial_point.hpp \
 				   genetic_map.hpp
 
