--- a/fwdpp/genetic_map/Makefile.in
+++ b/fwdpp/genetic_map/Makefile.in
@@ -268,6 +268,7 @@ top_srcdir = @top_srcdir@
 pkginclude_HEADERS = genetic_map_unit.hpp \
 				   poisson_interval.hpp \
 				   poisson_point.hpp \
+				   binomial_interval.hpp \
 				   binomial_point.hpp \
 				   genetic_map.hpp
 
