--- a/fwdpp/genetic_map/Makefile.in
+++ b/fwdpp/genetic_map/Makefile.in
@@ -270,6 +270,7 @@ pkginclude_HEADERS = genetic_map_unit.hpp \
 				   poisson_point.hpp \
 				   binomial_interval.hpp \
 				   binomial_point.hpp \
+				   fixed_number_crossovers.hpp \
 				   genetic_map.hpp
 
 all: all-am
