--- a/fwdpp/genetic_map/Makefile.am
+++ b/fwdpp/genetic_map/Makefile.am
@@ -5,5 +5,6 @@ pkginclude_HEADERS=genetic_map_unit.hpp \
 				   poisson_point.hpp \
 				   binomial_interval.hpp \
 				   binomial_point.hpp \
+				   fixed_number_crossovers.hpp \
 				   genetic_map.hpp
 
