--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -90,6 +90,7 @@ POST_UNINSTALL = :
 @BUNIT_TEST_PRESENT_TRUE@	unit/fwdpp_unit_tests$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/extensions_unit_tests$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_unit_tests$(EXEEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	unit/genetic_map_tests$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	integration/sugar_integration_tests$(EXEEXT)
 subdir = testsuite
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -151,6 +152,13 @@ am__unit_fwdpp_unit_tests_SOURCES_DIST = unit/fwdpp_unit_tests.cc \
 @BUNIT_TEST_PRESENT_TRUE@	fixtures/sugar_fixtures.$(OBJEXT)
 unit_fwdpp_unit_tests_OBJECTS = $(am_unit_fwdpp_unit_tests_OBJECTS)
 unit_fwdpp_unit_tests_LDADD = $(LDADD)
+am__unit_genetic_map_tests_SOURCES_DIST = unit/genetic_map_tests.cc \
+	unit/test_genetic_map.cc
+@BUNIT_TEST_PRESENT_TRUE@am_unit_genetic_map_tests_OBJECTS =  \
+@BUNIT_TEST_PRESENT_TRUE@	unit/genetic_map_tests.$(OBJEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	unit/test_genetic_map.$(OBJEXT)
+unit_genetic_map_tests_OBJECTS = $(am_unit_genetic_map_tests_OBJECTS)
+unit_genetic_map_tests_LDADD = $(LDADD)
 am__unit_sugar_unit_tests_SOURCES_DIST = unit/sugar_unit_tests.cc \
 	unit/sugar_GSLrngTest.cc unit/sugar_add_mutationTest.cc \
 	unit/sugar_change_neutralTest.cc unit/sugar_construct_pops.cc \
@@ -190,6 +198,7 @@ am__depfiles_remade = fixtures/$(DEPDIR)/sugar_fixtures.Po \
 	unit/$(DEPDIR)/fwdpp_unit_tests.Po \
 	unit/$(DEPDIR)/gameteTest.Po \
 	unit/$(DEPDIR)/gamete_cleanerTest.Po \
+	unit/$(DEPDIR)/genetic_map_tests.Po \
 	unit/$(DEPDIR)/mutateTest.Po \
 	unit/$(DEPDIR)/serializationTest.Po \
 	unit/$(DEPDIR)/siteDepFitnessTest.Po \
@@ -200,6 +209,7 @@ am__depfiles_remade = fixtures/$(DEPDIR)/sugar_fixtures.Po \
 	unit/$(DEPDIR)/sugar_popgenmut.Po \
 	unit/$(DEPDIR)/sugar_unit_tests.Po \
 	unit/$(DEPDIR)/test_general_rec_variation.Po \
+	unit/$(DEPDIR)/test_genetic_map.Po \
 	unit/$(DEPDIR)/test_mutate_recombine.Po \
 	unit/$(DEPDIR)/test_recombination.Po \
 	unit/$(DEPDIR)/test_sampling.Po \
@@ -223,11 +233,13 @@ am__v_CXXLD_1 =
 SOURCES = $(integration_sugar_integration_tests_SOURCES) \
 	$(unit_extensions_unit_tests_SOURCES) \
 	$(unit_fwdpp_unit_tests_SOURCES) \
+	$(unit_genetic_map_tests_SOURCES) \
 	$(unit_sugar_unit_tests_SOURCES)
 DIST_SOURCES =  \
 	$(am__integration_sugar_integration_tests_SOURCES_DIST) \
 	$(am__unit_extensions_unit_tests_SOURCES_DIST) \
 	$(am__unit_fwdpp_unit_tests_SOURCES_DIST) \
+	$(am__unit_genetic_map_tests_SOURCES_DIST) \
 	$(am__unit_sugar_unit_tests_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
@@ -571,6 +583,9 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@	unit/test_recombination.cc \
 @BUNIT_TEST_PRESENT_TRUE@	fixtures/sugar_fixtures.cc
 
+@BUNIT_TEST_PRESENT_TRUE@unit_genetic_map_tests_SOURCES = unit/genetic_map_tests.cc \
+@BUNIT_TEST_PRESENT_TRUE@	unit/test_genetic_map.cc
+
 @BUNIT_TEST_PRESENT_TRUE@unit_extensions_unit_tests_SOURCES = unit/extensions_unit_test.cc unit/extensions_regionsTest.cc unit/extensions_callbacksTest.cc
 @BUNIT_TEST_PRESENT_TRUE@unit_sugar_unit_tests_SOURCES = unit/sugar_unit_tests.cc \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_GSLrngTest.cc \
@@ -704,6 +719,14 @@ unit/test_recombination.$(OBJEXT): unit/$(am__dirstamp) \
 unit/fwdpp_unit_tests$(EXEEXT): $(unit_fwdpp_unit_tests_OBJECTS) $(unit_fwdpp_unit_tests_DEPENDENCIES) $(EXTRA_unit_fwdpp_unit_tests_DEPENDENCIES) unit/$(am__dirstamp)
 	@rm -f unit/fwdpp_unit_tests$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(unit_fwdpp_unit_tests_OBJECTS) $(unit_fwdpp_unit_tests_LDADD) $(LIBS)
+unit/genetic_map_tests.$(OBJEXT): unit/$(am__dirstamp) \
+	unit/$(DEPDIR)/$(am__dirstamp)
+unit/test_genetic_map.$(OBJEXT): unit/$(am__dirstamp) \
+	unit/$(DEPDIR)/$(am__dirstamp)
+
+unit/genetic_map_tests$(EXEEXT): $(unit_genetic_map_tests_OBJECTS) $(unit_genetic_map_tests_DEPENDENCIES) $(EXTRA_unit_genetic_map_tests_DEPENDENCIES) unit/$(am__dirstamp)
+	@rm -f unit/genetic_map_tests$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(unit_genetic_map_tests_OBJECTS) $(unit_genetic_map_tests_LDADD) $(LIBS)
 unit/sugar_unit_tests.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/sugar_GSLrngTest.$(OBJEXT): unit/$(am__dirstamp) \
@@ -740,6 +763,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/fwdpp_unit_tests.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/gameteTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/gamete_cleanerTest.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/genetic_map_tests.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/mutateTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/serializationTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/siteDepFitnessTest.Po@am__quote@ # am--include-marker
@@ -750,6 +774,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_popgenmut.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_unit_tests.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_general_rec_variation.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_genetic_map.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_mutate_recombine.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_recombination.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/test_sampling.Po@am__quote@ # am--include-marker
@@ -994,6 +1019,13 @@ unit/sugar_unit_tests.log: unit/sugar_unit_tests$(EXEEXT)
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
 	"$$tst" $(AM_TESTS_FD_REDIRECT)
+unit/genetic_map_tests.log: unit/genetic_map_tests$(EXEEXT)
+	@p='unit/genetic_map_tests$(EXEEXT)'; \
+	b='unit/genetic_map_tests'; \
+	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
+	--log-file $$b.log --trs-file $$b.trs \
+	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
+	"$$tst" $(AM_TESTS_FD_REDIRECT)
 integration/sugar_integration_tests.log: integration/sugar_integration_tests$(EXEEXT)
 	@p='integration/sugar_integration_tests$(EXEEXT)'; \
 	b='integration/sugar_integration_tests'; \
@@ -1108,6 +1140,7 @@ distclean: distclean-am
 	-rm -f unit/$(DEPDIR)/fwdpp_unit_tests.Po
 	-rm -f unit/$(DEPDIR)/gameteTest.Po
 	-rm -f unit/$(DEPDIR)/gamete_cleanerTest.Po
+	-rm -f unit/$(DEPDIR)/genetic_map_tests.Po
 	-rm -f unit/$(DEPDIR)/mutateTest.Po
 	-rm -f unit/$(DEPDIR)/serializationTest.Po
 	-rm -f unit/$(DEPDIR)/siteDepFitnessTest.Po
@@ -1118,6 +1151,7 @@ distclean: distclean-am
 	-rm -f unit/$(DEPDIR)/sugar_popgenmut.Po
 	-rm -f unit/$(DEPDIR)/sugar_unit_tests.Po
 	-rm -f unit/$(DEPDIR)/test_general_rec_variation.Po
+	-rm -f unit/$(DEPDIR)/test_genetic_map.Po
 	-rm -f unit/$(DEPDIR)/test_mutate_recombine.Po
 	-rm -f unit/$(DEPDIR)/test_recombination.Po
 	-rm -f unit/$(DEPDIR)/test_sampling.Po
@@ -1180,6 +1214,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f unit/$(DEPDIR)/fwdpp_unit_tests.Po
 	-rm -f unit/$(DEPDIR)/gameteTest.Po
 	-rm -f unit/$(DEPDIR)/gamete_cleanerTest.Po
+	-rm -f unit/$(DEPDIR)/genetic_map_tests.Po
 	-rm -f unit/$(DEPDIR)/mutateTest.Po
 	-rm -f unit/$(DEPDIR)/serializationTest.Po
 	-rm -f unit/$(DEPDIR)/siteDepFitnessTest.Po
@@ -1190,6 +1225,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f unit/$(DEPDIR)/sugar_popgenmut.Po
 	-rm -f unit/$(DEPDIR)/sugar_unit_tests.Po
 	-rm -f unit/$(DEPDIR)/test_general_rec_variation.Po
+	-rm -f unit/$(DEPDIR)/test_genetic_map.Po
 	-rm -f unit/$(DEPDIR)/test_mutate_recombine.Po
 	-rm -f unit/$(DEPDIR)/test_recombination.Po
 	-rm -f unit/$(DEPDIR)/test_sampling.Po
