--- a/fwdpp/ts/Makefile.am
+++ b/fwdpp/ts/Makefile.am
@@ -17,6 +17,7 @@ pkginclude_HEADERS= definitions.hpp \
 			remove_fixations_from_gametes.hpp \
 			recycling.hpp \
 			serialization_version.hpp \
-			serialization.hpp
+			serialization.hpp \
+			marginal_tree_functions.hpp
 
 
