Add functions for iteration over children.

--- a/fwdpp/ts/marginal_tree_functions/Makefile.am
+++ b/fwdpp/ts/marginal_tree_functions/Makefile.am
@@ -1,6 +1,7 @@
 pkgincludedir=$(prefix)/include/fwdpp/ts/marginal_tree_functions
 
 pkginclude_HEADERS= num_roots.hpp \
+					children.hpp
 					root_iterator.hpp
 
 
