Move root iteration code into single header. Fix details of child iteration.

--- a/fwdpp/ts/marginal_tree_functions/Makefile.in
+++ b/fwdpp/ts/marginal_tree_functions/Makefile.in
@@ -265,8 +265,9 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkginclude_HEADERS = num_roots.hpp \
-					children.hpp
+pkginclude_HEADERS = roots.hpp \
+					children.hpp \
+					root_iterator.hpp
 
 all: all-am
 
@@ -527,7 +528,6 @@ uninstall-am: uninstall-pkgincludeHEADERS
 
 .PRECIOUS: Makefile
 
-					root_iterator.hpp
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
