Add preorder traversal of nodes in marginal_tree and tests.

--- a/fwdpp/ts/marginal_tree_functions/Makefile.am
+++ b/fwdpp/ts/marginal_tree_functions/Makefile.am
@@ -2,6 +2,7 @@ pkgincludedir=$(prefix)/include/fwdpp/ts/marginal_tree_functions
 
 pkginclude_HEADERS= roots.hpp \
 					children.hpp \
+					nodes.hpp \
 					root_iterator.hpp
 
 
