--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -283,7 +283,8 @@ pkginclude_HEADERS = definitions.hpp \
 			recycling.hpp \
 			serialization_version.hpp \
 			serialization.hpp \
-			marginal_tree_functions.hpp
+			marginal_tree_functions.hpp \
+			decapitate.hpp
 
 all: all-am
 
