--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -121,11 +121,13 @@ am__tree_sequences_tree_sequence_tests_SOURCES_DIST =  \
 	tree_sequences/tree_sequence_tests.cc \
 	tree_sequences/test_generate_offspring.cc \
 	tree_sequences/test_node_traversal.cc \
-	tree_sequences/test_tree_visitor.cc
+	tree_sequences/test_tree_visitor.cc \
+	tree_sequences/test_decapitate.cc
 @BUNIT_TEST_PRESENT_TRUE@am_tree_sequences_tree_sequence_tests_OBJECTS = tree_sequences/tree_sequence_tests.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_generate_offspring.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_node_traversal.$(OBJEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_tree_visitor.$(OBJEXT)
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_tree_visitor.$(OBJEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_decapitate.$(OBJEXT)
 tree_sequences_tree_sequence_tests_OBJECTS =  \
 	$(am_tree_sequences_tree_sequence_tests_OBJECTS)
 tree_sequences_tree_sequence_tests_LDADD = $(LDADD)
@@ -205,6 +207,7 @@ am__depfiles_remade = fixtures/$(DEPDIR)/sugar_fixtures.Po \
 	integration/$(DEPDIR)/sugar_integration_tests.Po \
 	integration/$(DEPDIR)/sugar_singlepopTest.Po \
 	integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po \
+	tree_sequences/$(DEPDIR)/test_decapitate.Po \
 	tree_sequences/$(DEPDIR)/test_generate_offspring.Po \
 	tree_sequences/$(DEPDIR)/test_node_traversal.Po \
 	tree_sequences/$(DEPDIR)/test_tree_visitor.Po \
@@ -626,7 +629,8 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@tree_sequences_tree_sequence_tests_SOURCES = tree_sequences/tree_sequence_tests.cc \
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_generate_offspring.cc \
 @BUNIT_TEST_PRESENT_TRUE@									    tree_sequences/test_node_traversal.cc \
-@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_tree_visitor.cc
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_tree_visitor.cc \
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_decapitate.cc
 
 @BUNIT_TEST_PRESENT_TRUE@AM_CXXFLAGS = -W -Wall
 all: all-am
@@ -708,6 +712,9 @@ tree_sequences/test_node_traversal.$(OBJEXT):  \
 	tree_sequences/$(am__dirstamp) \
 	tree_sequences/$(DEPDIR)/$(am__dirstamp)
 tree_sequences/test_tree_visitor.$(OBJEXT):  \
+	tree_sequences/$(am__dirstamp) \
+	tree_sequences/$(DEPDIR)/$(am__dirstamp)
+tree_sequences/test_decapitate.$(OBJEXT):  \
 	tree_sequences/$(am__dirstamp) \
 	tree_sequences/$(DEPDIR)/$(am__dirstamp)
 
@@ -801,6 +808,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@integration/$(DEPDIR)/sugar_integration_tests.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@integration/$(DEPDIR)/sugar_singlepopTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_decapitate.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_generate_offspring.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_node_traversal.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_tree_visitor.Po@am__quote@ # am--include-marker
@@ -1191,6 +1199,7 @@ distclean: distclean-am
 	-rm -f integration/$(DEPDIR)/sugar_integration_tests.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepopTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_decapitate.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_offspring.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_node_traversal.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_tree_visitor.Po
@@ -1269,6 +1278,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f integration/$(DEPDIR)/sugar_integration_tests.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepopTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_decapitate.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_offspring.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_node_traversal.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_tree_visitor.Po
