Add fwdpp/ts/exceptions.hpp and fwdpp::ts::empty_samples.

--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -284,7 +284,8 @@ pkginclude_HEADERS = definitions.hpp \
 			serialization_version.hpp \
 			serialization.hpp \
 			marginal_tree_functions.hpp \
-			decapitate.hpp
+			decapitate.hpp \
+			exceptions.hpp
 
 all: all-am
 
