--- a/fwdpp/ts/marginal_tree_functions/Makefile.am
+++ b/fwdpp/ts/marginal_tree_functions/Makefile.am
@@ -3,6 +3,7 @@ pkgincludedir=$(prefix)/include/fwdpp/ts/marginal_tree_functions
 pkginclude_HEADERS= roots.hpp \
 					children.hpp \
 					nodes.hpp \
-					root_iterator.hpp
+					statistics.hpp
+					
 
 
