--- a/fwdpp/ts/marginal_tree_functions/Makefile.in
+++ b/fwdpp/ts/marginal_tree_functions/Makefile.in
@@ -268,7 +268,7 @@ top_srcdir = @top_srcdir@
 pkginclude_HEADERS = roots.hpp \
 					children.hpp \
 					nodes.hpp \
-					root_iterator.hpp
+					statistics.hpp
 
 all: all-am
 
