Refactor the dependency injection of node traversal order to use an abstract base class.  Tag dispatch is used to (hopefully) simplify the semantics.

--- a/fwdpp/ts/marginal_tree_functions/Makefile.in
+++ b/fwdpp/ts/marginal_tree_functions/Makefile.in
@@ -268,7 +268,9 @@ top_srcdir = @top_srcdir@
 pkginclude_HEADERS = roots.hpp \
 					children.hpp \
 					nodes.hpp \
-					statistics.hpp
+					statistics.hpp \
+					node_traversal_order.hpp \
+					node_traversal_preorder.hpp
 
 all: all-am
 
