--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -43,8 +43,8 @@ tree_sequences_tree_sequence_tests_SOURCES=tree_sequences/tree_sequence_tests.cc
 									    tree_sequences/test_node_traversal.cc \
 										tree_sequences/test_tree_visitor.cc \
 										tree_sequences/test_decapitate.cc \
-										tree_sequences/test_marginal_tree_statistics.cc
-										   
+										tree_sequences/test_marginal_tree_statistics.cc \
+										tree_sequences/test_node_traversal_order_adl.cc
 
 AM_CXXFLAGS=-W -Wall
 
