--- a/fwdpp/ts/marginal_tree_functions/Makefile.in
+++ b/fwdpp/ts/marginal_tree_functions/Makefile.in
@@ -268,6 +268,7 @@ top_srcdir = @top_srcdir@
 pkginclude_HEADERS = roots.hpp \
 					children.hpp \
 					nodes.hpp \
+					samples.hpp \
 					statistics.hpp \
 					node_traversal_order.hpp \
 					node_traversal_preorder.hpp
