--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -268,6 +268,7 @@ top_srcdir = @top_srcdir@
 pkginclude_HEADERS = definitions.hpp \
 			node.hpp \
 			edge.hpp \
+			site.hpp \
 			table_collection.hpp \
 			table_simplifier.hpp \
 			get_parent_ids.hpp \
