--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -286,7 +286,8 @@ pkginclude_HEADERS = definitions.hpp \
 			serialization.hpp \
 			marginal_tree_functions.hpp \
 			decapitate.hpp \
-			exceptions.hpp
+			exceptions.hpp \
+			new_variant_record.hpp
 
 all: all-am
 
