--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -287,7 +287,7 @@ pkginclude_HEADERS = definitions.hpp \
 			marginal_tree_functions.hpp \
 			decapitate.hpp \
 			exceptions.hpp \
-			new_variant_record.hpp
+			mutation_tools.hpp
 
 all: all-am
 
