--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -289,7 +289,8 @@ pkginclude_HEADERS = definitions.hpp \
 			exceptions.hpp \
 			mutation_tools.hpp \
 			table_types.hpp \
-			visit_sites.hpp
+			visit_sites.hpp \
+			site_visitor.hpp
 
 all: all-am
 
