g++5 and c++14 on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,19 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
         - CXXSTANDARD="c++11"
-    
+
+    - os: linux
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env:
+        - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+        - CXXSTANDARD="c++14"
+       
     # works on Precise and Trusty
     # - os: linux
     #   dist: trusty
