Default g++ on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,6 +79,12 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
         - CXXSTANDARD="c++14"
+
+    - os: linux
+      dist: trusty
+      env:
+        - MATRIX_EVAL="CC=gcc && CXX=g++"
+        - CXXSTANDARD="c++11"
        
     # works on Precise and Trusty
     # - os: linux
