Test gcc5 on Travis (#221)
Add Travis CI support for gcc 5 and the ubuntu/trusty default compiler version (which is ancient as of now).  Make changes to library to support these older compilers.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: cpp
 matrix:
     include:
+    - os: linux
+      dist: trusty
+      env:
+        - MATRIX_EVAL="CC=gcc && CXX=g++"
+        - CXXSTANDARD="c++11"
+       
    # - os: linux
    #   dist: trusty
    #   env: 
@@ -55,6 +61,31 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
         - CXXSTANDARD="c++14"
+
+    - os: linux
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env:
+        - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+        - CXXSTANDARD="c++11"
+
+    - os: linux
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env:
+        - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+        - CXXSTANDARD="c++14"
+
     # works on Precise and Trusty
     # - os: linux
     #   dist: trusty
